--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,4 +1,141 @@
 .site-header {
+    padding: 20px 0;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 50;
+    background-color: $white-clr;
+    margin-top: 44px;
 }
 .header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
+.header-content-wrapper1 {
+    display: flex;
+    align-items: center;
+    gap: 101.5px;
+}
+.header__list {
+    display: flex;
+    align-items: center;
+    gap: 32px;
+}
+.header__text-link {
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 23.87px;
+    color: $black-clr;
+}
+.header__content-wrapper2 {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+.header__number-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+.header__number {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 21.48px;
+    text-align: left;
+    color: $gray-clr;
+}
+.icons {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+.header__heart{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+.header__shop{
+    background-color: transparent;
+    border: none;
+}
+.red > svg > path{
+    fill: red;
+    stroke: red;
+}
+.hamburger-icon{
+    display: none;
+}
+.site-logo{
+    display: inline-block;
+}
+.hamburger-icon{
+    display: none;
+}
+.modal {
+    transform: scale(0);
+}
+// Responsive Start
+@media(max-width:1000px){
+    .site-header {
+        padding: 23px 0;
+        margin-top: 30px;
+        position: fixed;
+    }
+    .header{
+        border-bottom: 1px solid $gray-clr;
+        padding-bottom: 19px;
+    }
+    .header-content-wrapper1 {
+        display: flex;
+        align-items: center;
+        gap: 0px;
+    }
+    .header__list {
+        display: none;
+    }
+    .site-logo{
+        display: none;
+    }
+    .header__number-wrapper {
+        display: none;
+    }
+    .icons {
+        gap: 16px;
+    }
+    .hamburger-icon{
+        display: inline-block;
+        border: none;
+        background-color: transparent;
+    }
+    .modal{
+        position: absolute;
+        top: 170px;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        margin-left: 20px;
+        transform: scale(0);
+        transition: all 0.3s;
+    }
+    .modal__item{
+        width: 343px;
+        border-bottom: 1px solid $gray-clr;
+        padding-bottom: 16px;
+    }
+    .modal__text-link{
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 26px;
+        color: $gray-clr;
+    }
+    .show{
+        transform: scale(1);
+    }
+}
+@media(max-width:380px){
+    .modal__item{
+        width: 100%;
+    }
+}
+// Responsive End
