--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -1,5 +1,272 @@
 .hero-section {
+    padding: 160px 0 48px;
 }
-
 .hero {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 90px;
+    gap: 100px;
 }
+.hero__title-wrapper {
+    width: 400px;
+}
+.hero__title {
+    margin-bottom: 20px;
+    font-size: 44px;
+    font-weight: 600;
+    line-height: 62px;
+    color: $black-clr;
+}
+.hero__texts-wrapper {
+    width: 287px;
+    margin-bottom: 32px;
+    display: flex;
+    flex-direction: column;
+    gap: 16;
+}
+.hero__text1 {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    color: $gray-clr;
+}
+.hero__text2 {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    color: $gray-clr;
+}
+.hero__strong {
+    margin-bottom: 4px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 22px;
+    color: $gray-clr;
+}
+.hero__prices {
+    position: relative;
+    width: 201px;
+    margin-bottom: 16px;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+.hero__price1 {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 28.64px;
+    color: $black-clr;
+}
+.hero__price2 {
+    font-size: 22px;
+    font-weight: 300;
+    line-height: 26.25px;
+    color: $gray-clr;
+}
+.hero__span{
+    position: absolute;
+    width: 80px;
+    height: 1px;
+    background-color: $gray-clr;
+    right: 22px;
+}
+.hero__link {
+    display: inline-block;
+    width: 220px;
+    background-color: $blue-clr;
+    border: 1px solid $blue-clr;
+    padding: 12px 0;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 26px;
+    color: $white-clr;
+    text-align: center;
+    transition: all 0.3s linear;
+    
+    &:hover{
+        background-color: transparent;
+        color: $blue-clr;
+    }
+}
+.arrow-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+    cursor: pointer;
+}
+.hero__dot {
+    width: 6px;
+    height: 6px;
+    background-color: $lightblue-clr;
+    border-radius: 50%;
+    border: none;
+}
+.hero__dots{
+    border: none;
+}
+.border{
+    border: 1px solid $lightblue-clr;
+    border-radius: 50%;
+    padding: 8px;
+    cursor: pointer;
+}
+.blue{
+    background-color: $blue-clr;
+}
+// Responsive Start
+@media(max-width:1100px){
+    .hero-section {
+        padding: 40px 0;
+        margin-top: 100px;
+    }
+    .hero {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 30px;
+    }
+    .hero__title-wrapper {
+        width: 343px;
+    }
+    .hero__title {
+        margin-bottom: 24px;
+        font-size: 22px;
+        font-weight: 600;
+        line-height: 34px;
+    }
+    .hero__texts-wrapper {
+        display: none;
+    }
+    .hero__strong {
+        margin-bottom: 4px;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 22px;
+    }
+    .hero__prices {
+        position: relative;
+        width: 141px;
+        margin-bottom: 16px;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+    }
+    .hero__price1 {
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 21.48px;
+    }
+    .hero__price2 {
+        font-size: 14px;
+        font-weight: 300;
+        line-height: 16.71px;    
+    }
+    .hero__span{
+        position: absolute;
+        width: 60px;
+        height: 1px;
+        background-color: $gray-clr;
+        right: 22px;
+    }
+    .hero__link {
+        display: block;
+        width: 343px;
+        margin: 0 auto;
+        padding: 15px 0;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 19.09px; 
+    }
+    .hero__arrow1{
+        position: absolute;
+        left: 0;
+    }
+    .hero__arrow2{
+        position: absolute;
+        right: 0;
+    }
+    .hero__img{
+        width: 300px;
+        height: 280px;
+    }
+}
+@media(max-width:350px){
+    .hero-section {
+        padding: 35px 0;
+    }
+    .hero__title-wrapper {
+        width: 280px;
+    }
+    .hero__title {
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 20px;
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 34px;
+        text-align: center;
+    }
+    .hero__texts-wrapper {
+        display: none;
+    }
+    .hero__strong {
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 4px;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 22px;
+        text-align: center;
+    }
+    .hero__prices {
+        position: relative;
+        width: 100%;
+        margin-bottom: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 8px;
+    }
+    .hero__price1 {
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 21.48px;
+    }
+    .hero__price2 {
+        font-size: 14px;
+        font-weight: 300;
+        line-height: 16.71px;    
+    }
+    .hero__span{
+        position: absolute;
+        width: 50px;
+        height: 1px;
+        background-color: $gray-clr;
+        right: 110px;
+    }
+    .hero__link {
+        display: block;
+        width: 250px;
+        margin: 0 auto;
+        padding: 15px 0;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 19.09px; 
+    }
+    .hero__arrow1{
+        position: absolute;
+        left: 0;
+    }
+    .hero__arrow2{
+        position: absolute;
+        right: 0;
+    }
+    .hero__img{
+        width: 300px;
+        height: 280px;
+    }
+}
+// Responsive End
